============ Version 0.99.16

2004-09-16  Bastien Nocera  <hadess@hadess.net>

	* configure.in:

2004-09-15  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* README: update the Copyright notices
	* src/totem-playlist.c: (totem_playlist_current_has_prefix),
	(totem_playlist_clear_with_prefix):
	* src/totem-playlist.h: add totem_playlist_clear_with_prefix
	to remove playlist items with a particular prefix
	* src/totem.c: (totem_action_eject): call
	totem_playlist_clear_with_prefix when ejecting an optical media
	instead of simply stopping the play, so that the stream doesn't
	appear in the UI after an eject (Closes: #148480)

2004-09-15  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* src/totem-pl-parser.c: (totem_pl_parser_parse_internal),
	(totem_pl_parser_parse): We now can recurse into 3 levels of
	subdirectories (enough for drag'n'dropping, say, an "iTunes Music"
	directory) (Closes: #149173)

2004-09-15  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (totem_action_remote): fix addition of optical media
	URLs via the remote interface (Patch by Frederic Crozat
	<fcrozat@mandrakesoft.com>)

2004-09-15  Bastien Nocera  <hadess@hadess.net>

	* data/totem.keys: Add matroska to the .keys file for totem
	(Patch by Frederic Crozat <fcrozat@mandrakesoft.com>)

2004-09-15  Bastien Nocera  <hadess@hadess.net>

	* src/totem-preferences.c: (on_button1_clicked): fix KDE detection
	for newer KDE versions (Patch by Frederic Crozat
	<fcrozat@mandrakesoft.com>)

2004-09-15  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget-xine.c: (xine_event_message),
	(bacon_video_widget_set_logo): work-around a bug in xine-lib where
	it wouldn't send the right error message if trying to play a DVD
	without libdvdcss installed (Patch by Frederic Crozat
	<fcrozat@mandrakesoft.com>)

2004-09-14  Bastien Nocera  <hadess@hadess.net>

	* src/totem-remote.h:
	* src/totem.c: (totem_action_remote), (process_options),