@@ -1,3 +1,8 @@
+2004-09-16  Bastien Nocera  <hadess@hadess.net>
+
+	* src/egg-recent-model.c: (egg_recent_model_monitor): updated from
+	libegg
+
 ============ Version 0.99.16
 
 2004-09-16  Bastien Nocera  <hadess@hadess.net>
